# SparkPlug2D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
sp2d_core/: CMakeLists.txt
sp2d_core/SP2DCore/ECS/: Entity.cpp  Entity.h  Entity.inl  MetaUtilities.cpp  MetaUtilities.h  Registry.cpp  Registry.h  Registry.inl
sp2d_core/SP2DCore/ECS/Components/: AnimationComponent.h  IdentificationComponent.h  ScriptComponent.h  SpriteComponent.h  TransformComponent.h
sp2d_core/SP2DCore/Resources/: AssetManager.cpp  AssetManager.h
sp2d_core/SP2DCore/Scripting/: GlmLuaBindings.cpp  GlmLuaBindings.h  InputManager.cpp  InputManager.h
sp2d_core/SP2DCore/Systems/: AnimationSystem.cpp  AnimationSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptingSystem.cpp  ScriptingSystem.h
sp2d_editor/: CMakeLists.txt  dummy.cpp
sp2d_editor/assets/scripts/: main.lua
sp2d_editor/assets/shaders/: basicShader.frag  basicShader.vert
sp2d_editor/src/: Application.cpp  Application.h  main.cpp
sp2d_logging/: CMakeLists.txt
sp2d_logging/SP2DLogging/: Log.cpp  Log.h
sp2d_rendering/: CMakeLists.txt
sp2d_rendering/Rendering/Essentials/: Shader.cpp  Shader.h  ShaderLoader.cpp
sp2d_rendering/SP2DRendering/Core/: BatchRenderer.cpp  BatchRenderer.h  Camera2D.cpp  Camera2D.h
sp2d_rendering/SP2DRendering/Essentials/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Vertex.h
sp2d_utilities/: CMakeLists.txt
sp2d_utilities/SP2DUtilities/: SDL_Wrappers.cpp  SDL_Wrappers.h
sp2d_windowing/: CMakeLists.txt
sp2d_windowing/SP2DWindowing/Inputs/: Button.cpp  Button.h  Keyboard.cpp  Keyboard.h  Keys.h  Mouse.cpp  Mouse.h  MouseButtons.h
sp2d_windowing/SP2DWindowing/Window/: Window.cpp  Window.h
sp2d_windowing/Windowing/Window/: Window.cpp
